# Hecate

./: .gitignore  Makefile  Makefile.am  TODO  autogen.sh  configure.ac  sh.exe.stackdump  targets.mk
doc/: Campaign.tex  Character.tex  Checks.tex  Combat.tex  Definitions.tex  Introduction.tex  latexmkrc  main.tex  notes.tex  packages.tex
doc/Campaign/: Combat.tex  Setting.tex  Stats-Skills.tex  Traits-Events.tex
doc/Character/: Skills.tex  Statistics.tex  Templates.tex  Traits.tex
doc/Checks/: Events.tex  Modifiers.tex
doc/Combat/: Resources.tex  Turns.tex
m4/: ex_check_library.m4  ex_flags.m4  ex_with_gtest.m4
src/: Character.hh  Character.impl.hh  Check.cc  Check.hh  Check.impl.hh  Event.cc  Event.hh  Exception.hh  Modifier.cc  Modifier.hh  Modifier.impl.hh  ModifierList.cc  ModifierList.hh  ModifierType.cc  ModifierType.hh  Percent.cc  Percent.hh  Percentage.cc  Percentage.hh  Percentage.impl.hh  Random.cc  Random.hh  Resource.hh  Resource.impl.hh  Skill.hh  Skill.impl.hh  Stat.cc  Stat.hh  Stat.impl.hh  StatPrototype.cc  StatPrototype.hh  Template.hh  Template.impl.hh  Trait.hh  Trait.impl.hh
src/Algorithms/: Linear.hh  Linear.impl.hh
test/: Percentage.cc  Stat.cc  StatPrototype.cc  atlocal.in  character.at  check.at  modifier.at  random.at  stat-arith.cc  stat.at  template.at  testsuite.at  trait.at
test/character/: character-skill.cc  character-stat.cc  character.cc  percentage-arith.cc  percentage.at  resource.cc  stat-creation.cc  stat.at
test/check/: check.cc  modifier.cc  result.cc
test/modifier/: list.cc  modifier.cc  type.cc
test/random/: base.cc  pcg.cc
test/template/: template.cc
test/trait/: event.cc  trait.cc
win/: Hecate.sln
win/Hecate/: Hecate.vcxproj  Hecate.vcxproj.filters
win/HecateTests/: HecateTests.vcxproj  HecateTests.vcxproj.filters  character.cc  check.cc  modifier.cc  random.cc  stdafx.cpp  stdafx.h  template.cc  trait.cc
